Replace className for classList on panel for more suitable use case, Add event for colorPanel in js and edit in css

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,11 @@ body {
 }
 
 .panel {
-  
+  background-color: white;
   border: 1px solid black;
-  
+}
+
+.colorPanel {
+  background-color: grey;
+  border: 1px solid black;
 }
