--- a/css/style.css
+++ b/css/style.css
@@ -88,5 +88,21 @@ h1:focus {
 }
 
 .resetBtn {
+  background-color: rgb(16, 224, 16);
+  border: 0px;
+  margin: 10px 0px 10px 0px;
+  padding: 10px 28px 10px 28px;
+  font-size: 14px;
+  font-family: monospace;
+  transition: all .3s;
+  border-radius: 5px;
+  border-bottom: 4px solid orange;
+}
 
+.resetBtn:hover {
+  transform: scale(1.05);
+}
+
+.resetBtn:active {
+  transform: scale(.95);
 }
